# aws-serverless-api-sqs

./: README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
functions/: api.py  sqs-processor.py
