[tool.poetry]
name = "serverless-python-template"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
aws-lambda-powertools = "^1.17.0"
aws-xray-sdk = "^2.8.0"
aws-xray-lambda-segment-shim = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
